--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/CodeBreaker518/Curso_webpack/issues"
   },
-  "homepage": "https://github.com/CodeBreaker518/Curso_webpack#readme"
+  "homepage": "https://github.com/CodeBreaker518/Curso_webpack#readme",
+  "devDependencies": {
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  }
 }
